add location using map

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="celsius">Celsius</string>
     <string name="Kelvin">Kelvin</string>
     <string name="fahrenheit">Fahrenheit</string>
+    <string name="search">Search</string>
     <!-- TODO: Remove or change this placeholder text -->
 
 </resources>
