--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,19 @@
     <string name="city_name">City Name</string>
     <string name="time_alert">12:00Am</string>
     <string name="at">At</string>
+    <string name="alarm_sound">Alarm Sound</string>
+    <string name="notification_txt">Notification</string>
+    <string name="alarm_txt">Alarm</string>
+    <string name="windSpeed">Wind Speed</string>
+    <string name="milis">Miles/Hour</string>
+    <string name="meter">Meter/Sec</string>
+    <string name="weather_alert">Weather Alert</string>
+    <string name="dismiss_btn_txt">Dismiss</string>
+    <string name="no_alarm">There is No Alarm</string>
+    <string name="home">Home</string>
+    <string name="favorite">Favorite</string>
+    <string name="alert">Alert</string>
+    <string name="setting">Setting</string>
     <!-- TODO: Remove or change this placeholder text -->
 
 </resources>
