--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,16 @@
     <string name="favorite">Favorite</string>
     <string name="alert">Alert</string>
     <string name="setting">Setting</string>
+    <string name="features">Features</string>
+    <string name="ok">Ok</string>
+    <string name="no">No</string>
+    <string name="AWTD">Are you Want to delete it ?</string>
+    <string name="yes">Yes</string>
+    <string name="deleted">Deleted</string>
+    <string name="you_are_offline">You are offline. Some functionality may be unavailable.</string>
+    <string name="the_weather_is">The Weather is</string>
+    <string name="ther_is_no_alarm">There is No Alarm</string>
+    <string name="channel_name">Channel Nmae</string>
     <!-- TODO: Remove or change this placeholder text -->
 
 </resources>
